# onespirit

./: .dockerignore  .env.example  .env.prod.example  .gitignore  Dockerfile  Dockerfile.prod  PROJECT_BRIEF.md  README.md  db.sqlite3.00  docker-compose.prod.complete.yaml  docker-compose.prod.yaml  docker-compose.yaml  manage-secrets.sh  manage.py  monitor-resources.sh  pyproject.toml  setup-prod.sh  setup.sh  tmp_rovodev_loginuser_improvement_suggestions.md  tmp_rovodev_manual_migration.py  tmp_rovodev_migration_example.py  tmp_rovodev_performance_optimizations_summary.md  tmp_rovodev_test_data_creation.py
.devcontainer/: devcontainer.json
accounts/: admin.py  apps.py  managers.py  middleware.py  models.py  services.py  utils.py
clubs/: admin.py  models.py  tests.py
docs/: PROJECT_BRIEF.md  copilot-dockerfile-troubleshooting-2025-11-19.md  copilot-production-setup-audit-2025-11-20.md  copilot-setup-sh-refactor-and-smoke-2025-11-18.md  copilot-smoke-check-2025-11-19.md  copilot-step3-15-16-17-2025-12-02T08-27-54.289Z.txt  digitalocean-deployment.md  env-variable-consistency-implementation.md  gemini-code-audit-2025-10-02.md  gemini_0004_convert_clubstaff_user_to_contact.md  loginuser-model-naming-discussion-2025-12-02.md  production-deployment.md  refactor-execution-plan-loginuser-to-userprofile-2025-12-02.md  refactor-execution-plan-overview-2025-12-02.md  refactor-strategy-ai-executability-analysis-2025-12-02.md  refactor-strategy-loginuser-to-userprofile-2025-12-02.md  roles-refactor-clubstaff-user-to-contact-refactor-2025-11-25.md  setup-script-guide.md  (+17 more)
(+43 files in other folders)
